[package]
name = "evalsa-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.9", features = ["derive"] }
rkyv = "0.7.40"
zmq = "0.10.0"
serde = "1.0.156"
bincode = "1.3.3"
tempfile = "3.5.0"

[dependencies.evalsa-worker-proto]
version = "0.1.0"
path = "../worker-proto"
