[package]
name = "evalsa-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.156"
tempfile = "3.5.0"
nix = { version = "0.27.1", features = [
    "fs",
    "sched",
    "resource",
    "mount",
    "signal",
] }
libc = "0.2.152"
toml = "0.8.8"
amiquip = "0.4.2"
ciborium = "0.2.2"

[dependencies.evalsa-worker-proto]
version = "0.1.0"
path = "../worker-proto"
